# MPGD_Sim

./: README.md
Gas/GasFile/: CMakeLists.txt  PlotTransport.C  generate.C  printTable.C
Gas/GasFile/GeneratedTables/: Ar_80.000000_CO2_20.000000_0.000000T_ang90.000000.gas  Ar_80.000000_CO2_20.000000_1.700000T_ang90.000000.gas  Kr_70.000000_CO2_30.000000_0.000000T_ang90.000000.gas  Kr_80.000000_CO2_20.000000_0.000000T_ang90.000000.gas  Kr_80.000000_CO2_20.000000_1.700000T_ang90.000000.gas  Xe_80.000000_C4H10_20.000000_0.000000T_ang90.000000.gas  Xe_80.000000_CO2_20.000000_0.000000T_ang90.000000.gas
Ionization/: CMakeLists.txt  README.md  mip_ionization.C
